# QT

./: .gitignore  .qmake.stash  BUGFIX_SUCCESS_SUMMARY.md  CLAUDE.md  COLOR_MAPPING_FIX_SUMMARY.md  COMPILE_AND_TEST_GUIDE.md  FINAL_UI_IMPROVEMENT_REPORT.md  FIX_PLAN_COORD_CLEAR.md  IMPLEMENTATION_SUCCESS_REPORT.md  LINE_DRAWING_FIXES_REPORT.md  LINE_DRAWING_TOOLBAR_HORIZONTAL_LAYOUT_REPORT.md  LINE_DRAWING_TOOLBAR_OPTIMIZATION_REPORT.md  LINE_DRAWING_TOOLBAR_UI_OPTIMIZATION_REPORT.md  LINE_PROPERTY_PANEL_FIXES_REPORT.md  LINE_PROPERTY_PANEL_REMOVAL_REPORT.md  LINE_SEGMENT_DATA_LIFECYCLE_FIX.md  LINE_SEGMENT_VISIBILITY_DEBUG.md  LINE_SEGMENT_VISUALIZATION_FIX.md  MainWindow_Responsive_Test_Guide.md  Makefile  Makefile.Debug  Makefile.Release  README.md  RENDER_PARAMS_BUGFIX_REPORT.md  RENDER_PARAMS_TOGGLE_REPORT.md  STAGE1_COMPLETION_REPORT.md  STAGE1_DEMO_GUIDE.md  TOGGLE_ISSUE_FIX_REPORT.md  UI_IMPROVEMENT_REPORT.md  bug.txt  color_mapping_fix_report.md  config.cpp  config.h  coordinate_fix_summary.md  demoC.pro  demoC.pro.user.8a9d6c0  demoC.pro.user.ae4b5bf  generate_test_pointclouds.py  lineplotwidget.cpp  lineplotwidget.h  (+42 more)
debug/: moc_color_mapping_manager.cpp  moc_line_drawing_tool.cpp  moc_line_drawing_toolbar.cpp  moc_line_info_panel.cpp  moc_line_list_widget.cpp  moc_line_property_panel.cpp  moc_point_cloud_processor.cpp  moc_predefs.h  moc_stage1_demo_widget.cpp  moc_ui_integration_helper.cpp  moc_wall_extraction_manager.cpp  moc_wall_fitting_algorithm.cpp  moc_wall_fitting_progress_dialog.cpp  moc_wall_fitting_result_dialog.cpp  moc_wireframe_generator.cpp  (+1 more)
floorplan_code_v1/Segmentation/: CMakeLists.txt  FileIO.cpp  base.h  ceiling.txt  floor.txt  main.cpp  ransac_detection.cpp
tests/: tests.pro  (+8 more)
(+86 files in other folders)
